# words

./: .gitattributes  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.todo/: done.txt  todo.txt  todo.txt.bak
assets/colors/: x11-colors.json
assets/prose/: a-christmas-carol.txt  alice-in-wonderland.txt  dracula.txt  frankenstein.txt  grimms-fairy-tales.txt  gullivers-travels.txt  on-the-duty-of-civil-disobedience.txt  peter-pan.txt  the-adventures-of-sherlock-olmes.txt  the-wonderful-wizard-of-oz.txt  twenty-thousand-leagues-under-the-sea.txt  varney-the-vampire.txt  war-of-the-worlds.txt  winnie-the-pooh.txt
assets/wordlists/: dictionary.txt
doc/: api.json  api.md  datamuse.md  dict.md  ideas.md  pronunciation.md  resources.md  wordnik.md
peripherals/: README.md  arpabet-translate  arpabet_dictionary.py  compare_syllables.py  consonant_matching.py  databases.list  databases.show  datamuse-words.json  dm-param-runner.py  dumb-quotes  filter-dict  fix-sentences.py  fix-text  grok.py  pattern.def  pronunciation.cache  rand.py  random_sentences.py  skip-tokens.txt  smart-quotes.txt  syllable.py  word.py
peripherals/books/: varney-the-vampire.txt
tests/: __init__.py  conftest.py  mock_socket.py  test_attrdict.py  test_collection.py  test_datamuse.py  test_datamuse_api.py  test_definition_request.py  test_dictionary_entry.py  test_meta.py  test_random.py  test_resource.py  test_response_status.py  test_web_reference.py  test_word.py
words/: __init__.py  attrdict.py  cli.py  collection.py  color.py  compat.py  datamuse.py  datamuse_api.py  datamuse_options.py  definition_request.py  dictionary_entry.py  object.py  random.py  resource.py  response_status.py  web_reference.py  web_references.py  word.py  word_presenter.py
(+50 files in other folders)
