[tool.poetry]
name = "words"
version = "0.1.0"
description = "Simple wrapper for datamuse API."
authors = ["Alissa Huskey <alissa.huskey@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
typer = "^0.12.3"
python-datamuse = "^2.0.1"
requests = "^2.31.0"
rich = "^13.7.1"

[tool.poetry.scripts]
words = "words.cli:run"


[tool.poetry.group.dev.dependencies]
flake8-docstrings = "^1.7.0"
ipython = "^8.23.0"
pylama = "^8.4.1"
install = "^1.3.5"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
