[tool.poetry]
name = "words"
version = "0.3.0"
description = "Simple wrapper for datamuse API."
authors = ["Alissa Huskey <alissa.huskey@gmail.com>"]
readme = "README.md"
include = ["assets/*/*"]

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
typer = "^0.12.3"
python-datamuse = "^2.0.1"
rich = "^13.7.1"
py-dict-client = "^0.2.0"
syllabifier = { git = "https://github.com/dippedrusk/arpabet-syllabifier.git" }
click = "^8.1.7"
openai = "^1.28.1"
groq = "^0.5.0"
pydantic = "^2.7.1"
inflect = "^7.2.1"

[tool.poetry.scripts]
words = "words.cli.cli:main"

[tool.pytest.ini_options]
addopts = "-vx --disable-socket"

[tool.poetry.group.dev.dependencies]
flake8-docstrings = "^1.7.0"
ipython = "^8.23.0"
pylama = "^8.4.1"
install = "^1.3.5"
isort = "^5.13.2"
pytest = "^8.1.1"
pdbpp = "^0.10.3"
black = "^24.4.0"
pynvim = "^0.5.0"
pycodestyle = "^2.11.1"
flake8 = "^7.0.0"
flake8-black = "^0.3.6"
flake8-isort = "^6.1.1"
pytest-socket = "^0.7.0"
mocket = "^3.12.5"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
